--- a/HTML+CSS+JavaScript/08/border-6.html
+++ b/HTML+CSS+JavaScript/08/border-6.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>상품 소개 페이지</title>
+  <title>Document</title>
   
 </head>
 <body>
-  <img src="../../File/레드향.jpeg">
+  
 </body>
 </html>
