--- a/HTML+CSS+JavaScript/학원 강의/20230619_main.html
+++ b/HTML+CSS+JavaScript/학원 강의/20230619_main.html
@@ -12,6 +12,9 @@
     <div><img src="/resources/images/레드향.jpeg"></div>
     <div>
       <form action="/학원 강의/20230619_search_do.html" method="get">
+        <input type="color" name="mycolor">
+        <input type="date" name="mydate">
+        <input type="datatime" name="mydatetime">
         <fieldset>
           <legend>it관련</legend>
            <input type="checkbox" name="it" value="java" id="javaid"><label for="javaid">Java</label>
