--- a/HTML+CSS+JavaScript/07/quiz-2.html
+++ b/HTML+CSS+JavaScript/07/quiz-2.html
@@ -5,13 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <style>
-    #circle {
-      border-radius: 50%;
+    h1 {
+      background: rgb(18, 17, 17);
     }
   </style>
 </head>
 <body>
-  <img src="/resources/images/레드향.jpeg" alt="">
-  <img id="circle" src="/resources/images/레드향.jpeg">
+  <h1>웹 개발 기초</h1>
 </body>
 </html>
