--- a/HTML+CSS+JavaScript/08/border-7.html
+++ b/HTML+CSS+JavaScript/08/border-7.html
@@ -5,13 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <style>
-    #circle {
-      border-radius: 50%;
+    div {
+      width: 200px;
+      height: 150px;
+    }
+    #round1 {
+      border: 2px solid blue;
+      border-top-left-radius: 20px;
+      border-top-right-radius: 20px;
     }
   </style>
 </head>
 <body>
-  <img src="/resources/images/레드향.jpeg" alt="">
-  <img id="circle" src="/resources/images/레드향.jpeg">
+  <div id="round1"></div>
 </body>
 </html>
