--- a/HTML+CSS+JavaScript/07/sol-2.html
+++ b/HTML+CSS+JavaScript/07/sol-2.html
@@ -5,13 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <style>
-    #circle {
-      border-radius: 50%;
+    h1 {
+      text-align: center;
+      background: black;
+      color: white;
+      text-shadow: 3px 2px 5px black;
     }
   </style>
 </head>
 <body>
-  <img src="/resources/images/레드향.jpeg" alt="">
-  <img id="circle" src="/resources/images/레드향.jpeg">
+  <h1>웹 개발 기초</h1>
 </body>
 </html>
