--- a/HTML+CSS+JavaScript/08/display.html
+++ b/HTML+CSS+JavaScript/08/display.html
@@ -5,13 +5,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <style>
-    #circle {
-      border-radius: 50%;
+    * {
+      box-sizing: border-box;
+    }
+    nav ul {
+      list-style: none;
+    }
+    nav ul li {
+      display: inline-block;
+      padding: 20px;
+      margin: 0 20px;
+      border: 1px solid #222;
     }
   </style>
 </head>
 <body>
-  <img src="/resources/images/레드향.jpeg" alt="">
-  <img id="circle" src="/resources/images/레드향.jpeg">
+  
 </body>
 </html>
