--- a/HTML+CSS+JavaScript/08/display.html
+++ b/HTML+CSS+JavaScript/08/display.html
@@ -20,6 +20,13 @@
   </style>
 </head>
 <body>
-  
+  <nav>
+    <ul>
+      <li>menu 1</li>
+      <li>menu 2</li>
+      <li>menu 3</li>
+      <li>menu 4</li>
+    </ul>
+  </nav>
 </body>
 </html>
