교재 및 팀플 작업

--- a/HTML+CSS+JavaScript/학원 강의/UI_HTML_5.html
+++ b/HTML+CSS+JavaScript/학원 강의/UI_HTML_5.html
@@ -48,12 +48,19 @@
     /* footer 자식 layout */
     footer{
       height: 50px;
+      text-align: center;
+      padding: 10px;
+      background-color: #c6c3c3;
+     
     }
     /* / nav 자식 detail */
     nav a {
       text-decoration: none;
       display: inline-block;
       width: 100%;
+    }
+    section {
+      background-color: #6c6868;
     }
   </style>
 </head>
@@ -74,7 +81,8 @@
             <td><input type="password"></td>
           </tr>
           <tr>
-            <td colspan="2"><input type="submit" value="제출"><input type="reset" value="초기화"></td>
+            <td colspan="2"><input type="submit" value="로그인">
+              <input type="reset" value="취소"></td>
           </tr>
         </tbody>
       </table>
@@ -82,11 +90,12 @@
   </header>
   <nav>
     <ul>
-      <li><a href="#">ㅇ</a></li>
-      <li><a href="#">ㅇㄹ</a></li>
-      <li><a href="#">ㅇㄹㅁ</a></li>
-      <li><a href="#">ㅇㄹㅁㅇ</a></li>
-      <li><a href="#">asdfi</a></li>
+      <li><a href="#">메인</a></li>
+      <li><a href="#">공지사항</a></li>
+      <li><a href="#">자유게시판</a></li>
+      <li><a href="#">갤러리</a></li>
+      <li><a href="#">회원관리</a></li>
+      <li><a href="#">채팅하기</a></li>
     </ul>
   </nav>
   <section>
