--- a/HTML+CSS+JavaScript/team_project/main.html
+++ b/HTML+CSS+JavaScript/team_project/main.html
@@ -257,7 +257,7 @@
     </div>
   </div>
   <div id="footArea">
-    <div class="divBottmom_Banner" class="ui-foot-banner" style="background: url(/resources/images/line.gif) 0px top repeat-x scroll;">
+    <div class="divBottmom_Banner" class="ui-foot-banner" style=") 0px center repeat-x scroll;">
       <a id="a_Bottom_banner" href="https://events.interpark.com/exhibition?exhibitionCode=230405006" target="_self">
         <img ga:ca="PWC-Main" ga:ac="푸터배너" id="img_Bottom_Banner" src="/resources/images/images.jpeg" alt="성수기프로모션 모델">
       </a>
@@ -269,7 +269,6 @@
             <a href="http://corp.interpark.com" target="_blank" title="회사소개">회사소개</a>
           </li>
           <li>
-            
             <a href="https://m.interpark.com/terms.html#agree" target="_blank" title="이용약관">이용약관</a>
           </li>
           <li>
@@ -321,7 +320,7 @@
             <p>주소 서울시 강남구 삼성로 512 삼성동빌딩 10층</p>
             <p>
               "사업자등록번호 824-81-02515"
-              <a href="http:">사업자정보확인</a>
+              <a href="http:" class="linkText">사업자정보확인</a>
             </p>
             <p>통신판매업신고 2022-서울강남-02179</p>
             <p>관광사업증 등록번호 : 제2014-42호</p>
@@ -363,10 +362,10 @@
             </p>
             <p>
               <span>
-                <a href="http://TODO">투어 1:1문의</a>
+                <a href="http://TODO" class="linkText">투어 1:1문의</a>
               </span>
               <span>
-                <a href="http://TODO">티켓 1:1문의</a>
+                <a href="http://TODO" class="linkText">티켓 1:1문의</a>
               </span>
             </p>
           </div>
