강의 및 팀플 수정

--- a/HTML+CSS+JavaScript/team_project/main.html
+++ b/HTML+CSS+JavaScript/team_project/main.html
@@ -16,7 +16,7 @@
   </style>
 </head>
 
-<body style="width: 100%; padding-left: 10%; padding-right: 10%;">
+<body>
   <div>
     <header>
 
@@ -24,7 +24,7 @@
   </div>
   <div>
     <div>
-      <main>
+      <main class="tourMain">
         <section>
           <h2>메인베너</h2>
           <div id="carouselExample" class="carousel slide">
@@ -257,7 +257,7 @@
     </div>
   </div>
   <div id="footArea">
-    <div class="divBottmom_Banner" class="ui-foot-banner" style=") 0px center repeat-x scroll;">
+    <div id="divBottmom_Banner" class="ui-foot-banner" style="background: url(/resources/images/line.gif) 0px center repeat-x scroll;">
       <a id="a_Bottom_banner" href="https://events.interpark.com/exhibition?exhibitionCode=230405006" target="_self">
         <img ga:ca="PWC-Main" ga:ac="푸터배너" id="img_Bottom_Banner" src="/resources/images/images.jpeg" alt="성수기프로모션 모델">
       </a>
