교재 및 강의

--- a/HTML+CSS+JavaScript/학원 강의/20230626_js_01.html
+++ b/HTML+CSS+JavaScript/학원 강의/20230626_js_01.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>js event</title>
   <link rel="stylesheet" href="/resources/css/reset.css">
   <!-- <script src="/resources/js/test.js"></script> -->
 </head>
@@ -163,7 +163,86 @@
     arr1 = arr1.concat(arr2, arr3);
     console.log(arr1);
 
-    arr1.push(function(){console.log("함수도 가능")});
+    arr1.push(function(){console.log("함수도 값으로 넣을 수 있음")});
+
+    console.log("====함수====")
+    //java에서 overloading - 매개변수 개수, 자료형이 다를때
+    // js - 같은 이름의 함수 변수 사용시 마지막에 대입한 값으로 정의됨.
+    //매개변수 개수
+    function sum(a,b){
+      console.log("sum 1 : "+ a + ", " + b);
+    }
+    function sum(a, b, msg){
+      console.log("sum2 : "+ a + ", " + b + ", " + msg);
+      if(typeof(b) == "function") {
+        b();
+      }
+    }
+    
+
+    sum(10, 20);
+    sum(10, 20, 30);
+    sum();
+    sum(10, 20, 30, 40, 50);
+    sum("문자", function(){console.log("매개인자로보낸익명함수 1")}, new Object(), 40, 50)
+    sum("문자", function(){console.log("매개인자로보낸익명함수 2")}, new Object(), 40, 50)
+    console.log("=========");
+    sum("문자", abc2, new Object(), 40, 50);  //abc2 는 function 형태
+    sum("문자", abc2(), new Object(), 40, 50);  //abc2()를 실행한 결과값 형태
+
+    console.log("=====객체Object=====")
+    var obj2 = new Object();
+    obj2.k1 = 100;
+    var obj1 = {
+      k1 : 10,
+      k2 : "안녕",
+      k3 : function(){
+        console.log("obj1의 k3키에 해당하는 함수임.");
+      },
+      k4 : 20
+      // 더 추가?
+      // k5 : 100
+      // k6: function(){console.log("obj1의 k6키에 해당하는 함수임.");}
+    };
+    obj1.k1 = 1000;
+    obj1["k1"] = 2000;
+    // console.log(obj1.k3)
+    obj1.k3();
+    obj1["k3"]();
+    // obj1.k2(); obj1.k2 is not a function
+    obj1.k5 = 100;
+    obj1.k6 = function(){console.log("obj1의 k6키에 해당하는 함수임.");};
+    obj1["k7"] = function(){console.log("obj1의 k7키에 해당하는 함수임.");};
+    console.log(obj1);
+    //접근한 kye=필드=속성=멤버변수 명이 기존애 존재하면 값교체, 기존없었따면 추가
+    console.log(obj1.k10);
+
+    console.log("=====함수2=====")
+    function func2(nickname, title, content){
+      var obj3 = new Object();
+      obj3.k1 = nickname;
+      obj3.k2 = title;
+      obj3.k3 = content;
+      obj3.k4 = function(){console.log("obj3의 함수 K2");};
+      return obj3;
+    };
+    console.log(func2("홍길동", "게시글제목남김", "날씨 좋네" ));
+    var nana = func2("나나", "나나나", "날씨 좋네");
+    nana.k4();
+
+    console.log("====배열2====");
+    var arr1 = [10,20];
+    arr1[2] = nana;
+    arr1[3] = {
+      k1 : 10,
+      k2 : "안녕",
+    };
+    console.log(arr1);  // [10, 20, {...}, {...}]
+    var obj4 = {k1:10, k2:arr1};  
+    console.log(obj4);  // {k1 : 10, k2: Array(4)}
+    console.log(obj4.k2);
+
+
   </script>
 </body>
 </html>
